caffeine_lang/test/caffeine_lang/corpus/frontend/parser/errors/unknown_type.caffeine
Blueprints
  * "test":
    Requires { field: Unknown }
    Provides { value: "x" }
